--- a/windows/campo_bocce.ui
+++ b/windows/campo_bocce.ui
@@ -20,10 +20,10 @@
    <item>
     <spacer name="spacerVerticalTop">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::Minimum</enum>
+      <enum>QSizePolicy::Policy::Minimum</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -78,7 +78,7 @@
       <item>
        <spacer name="spacerHorizontalControlli">
         <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+         <enum>Qt::Orientation::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -91,6 +91,13 @@
       <item>
        <widget class="QWidget" name="widgetControlliDestra" native="true">
         <layout class="QVBoxLayout" name="layoutDestra">
+         <item>
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>Durata Prenotazione</string>
+           </property>
+          </widget>
+         </item>
          <item>
           <widget class="QWidget" name="widgetDurataInvio" native="true">
            <layout class="QHBoxLayout" name="layoutDurataInvio">
@@ -107,20 +114,30 @@
              <number>0</number>
             </property>
             <item>
-             <widget class="QLineEdit" name="txtDurata">
-              <property name="placeholderText">
-               <string>Digita la durata...</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="btnInvia">
-              <property name="text">
-               <string>Invia</string>
-              </property>
-             </widget>
+             <widget class="QTimeEdit" name="tmeDurata"/>
             </item>
            </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>Data Prenotazione</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QDateTimeEdit" name="dteDataOraPrenotazione">
+           <property name="date">
+            <date>
+             <year>2024</year>
+             <month>1</month>
+             <day>1</day>
+            </date>
+           </property>
+           <property name="calendarPopup">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item>
@@ -129,7 +146,7 @@
             <string>costo totale</string>
            </property>
            <property name="alignment">
-            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
            </property>
            <property name="margin">
             <number>5</number>
@@ -145,10 +162,10 @@
    <item>
     <spacer name="spacerVerticalBottom">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::Expanding</enum>
+      <enum>QSizePolicy::Policy::Expanding</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -161,10 +178,10 @@
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+      <enum>Qt::Orientation::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
      </property>
      <property name="centerButtons">
       <bool>false</bool>
