--- a/windows/campo_bocce.ui
+++ b/windows/campo_bocce.ui
@@ -143,7 +143,7 @@
          <item>
           <widget class="QLabel" name="lblCostoTotale">
            <property name="text">
-            <string>costo totale</string>
+            <string>Costo Totale: 0€</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
