Aggiunta della gestione dell'amministratore con interfaccia grafica e aggiornamento delle statistiche

--- a/windows/amministratore.ui
+++ b/windows/amministratore.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>450</height>
+    <width>900</width>
+    <height>700</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,6 @@
      <property name="font">
       <font>
        <pointsize>14</pointsize>
-       <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
@@ -27,7 +26,7 @@
       <string>Amministratore</string>
      </property>
      <property name="alignment">
-      <set>Qt::AlignCenter</set>
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
    </item>
@@ -36,9 +35,27 @@
      <layout class="QHBoxLayout" name="horizontalLayout_Content">
       <item>
        <widget class="QWidget" name="leftAdminControls" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>400</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <layout class="QVBoxLayout" name="verticalLayout_AdminControls">
          <item>
           <widget class="QWidget" name="addRemoveAdminContainer" native="true">
+           <property name="maximumSize">
+            <size>
+             <width>400</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <layout class="QHBoxLayout" name="horizontalLayout_AddRemoveAdmin">
             <item>
              <widget class="QWidget" name="addAdminContainer" native="true">
@@ -72,16 +89,12 @@
          </item>
          <item>
           <widget class="QListWidget" name="lstAmministratori">
-           <item>
-            <property name="text">
-             <string>Amministratore 1</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Amministratore 2</string>
-            </property>
-           </item>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>16777215</height>
+            </size>
+           </property>
           </widget>
          </item>
          <item>
@@ -103,8 +116,14 @@
       </item>
       <item>
        <widget class="Line" name="lineVerticalSeparator">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="orientation">
-         <enum>Qt::Vertical</enum>
+         <enum>Qt::Orientation::Vertical</enum>
         </property>
        </widget>
       </item>
@@ -113,30 +132,25 @@
         <layout class="QVBoxLayout" name="verticalLayout_StatsFeedback">
          <item>
           <widget class="QLabel" name="lblGraficoStatistiche">
-           <property name="text">
-            <string>Grafico delle statistiche di utilizzo
-degli ultimi 14 giorni (placeholder)</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <spacer name="verticalSpacer_Graph">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeType">
-            <enum>QSizePolicy::Fixed</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
+           <property name="minimumSize">
             <size>
-             <width>20</width>
-             <height>150</height>
+             <width>500</width>
+             <height>400</height>
             </size>
            </property>
-          </spacer>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignmentFlag::AlignCenter</set>
+           </property>
+           <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+              <horstretch>0</horstretch>
+              <verstretch>1</verstretch>
+             </sizepolicy>
+            </property>
+          </widget>
          </item>
          <item>
           <widget class="QPushButton" name="btnPrenotazioniEffettuate">
@@ -161,10 +175,10 @@ degli ultimi 14 giorni (placeholder)</string>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+      <enum>Qt::Orientation::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
      </property>
      <property name="centerButtons">
       <bool>true</bool>
